@@ -1,6 +1,7 @@
 2010-10-31 MA Yue <velly.empire@gmail.com>
 
     * Correct Bioclipse installation
+    * Correct RadioGet installation
 
 2010-10-29 Homer Xing <homer.xing@gmail.com>
 
